<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/black"
        android:paddingVertical="20dp"
        android:paddingHorizontal="40dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/four"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/black"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_three"
        app:layout_constraintStart_toStartOf="@id/tv_three"
        app:layout_constraintEnd_toEndOf="@id/tv_three" />

    <TextView
        android:id="@+id/tv_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/five"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/black"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_four"
        app:layout_constraintStart_toStartOf="@id/tv_three"
        app:layout_constraintEnd_toEndOf="@id/tv_three" />

</androidx.constraintlayout.widget.ConstraintLayout>