<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="40dp">

    <TextView
        android:id="@+id/tv_dialog_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="@font/langar_regular"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:fontFamily="@font/langar_regular"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/tv_dialog_three"
        app:layout_constraintStart_toStartOf="@id/tv_dialog_three"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_three" />

    <TextView
        android:id="@+id/tv_dialog_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:fontFamily="@font/langar_regular"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/tv_dialog_three"
        app:layout_constraintStart_toStartOf="@id/tv_dialog_three"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_four" />

</androidx.constraintlayout.widget.ConstraintLayout>