<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".clear.ClearFragment">

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/langar_regular"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/tv_clear_record_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_clear_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/langar_regular"
            android:text="@string/your_record"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/tv_clear_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_clear_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/langar_regular"
            android:text="@{result}"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_clear_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/langar_regular"
            android:text="@string/again"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_clear_record_title"
            app:layout_constraintStart_toStartOf="@id/tv_clear_record_title"
            app:layout_constraintTop_toBottomOf="@id/tv_clear_record" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>