<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="puzzleViewModel"
            type="com.example.puzzle.PuzzleViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FinishActivity">

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/langar_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_record_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/your_record"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/langar_regular"
            app:layout_constraintBottom_toTopOf="@id/tv_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{puzzleViewModel.record}"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/langar_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/langar_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_record_title"
            app:layout_constraintEnd_toEndOf="@id/tv_record_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>